force-app/main/default/objects/Account/fields/Active_Sim_Cards_MBB__c.field-meta.xml
<CustomField>
    <fullName>Active_Sim_Cards_MBB__c</fullName>
    <description>Average amount of MBB SIM cards from the last 12 months</description>
    <inlineHelpText>Average amount of MBB SIM cards from the last 12 months</inlineHelpText>
    <label>Active Sim Cards (MBB)</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>