force-app/main/default/objects/Account/fields/Auto_NPS_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Auto_NPS_Trigger__c</fullName>
    <formula>($CustomMetadata.Telia_Settings__mdt.Settings.NPS_Send_Date_1__c  - $CustomMetadata.Telia_Settings__mdt.Settings.NPS_Auto_Update_Days_Before_NPS_Send_Dat__c) = TODAY() ||
 ($CustomMetadata.Telia_Settings__mdt.Settings.NPS_Send_Date_2__c  - $CustomMetadata.Telia_Settings__mdt.Settings.NPS_Auto_Update_Days_Before_NPS_Send_Dat__c) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto NPS Trigger</label>
    <type>Checkbox</type>
</CustomField>