force-app/main/default/objects/Account/fields/Billing_Door_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Door_Number__c</fullName>
    <description>Hidden from the user interface, to double check the full address fields</description>
    <label>Billing Door Number</label>
    <length>4</length>
    <type>Text</type>
</CustomField>