force-app/main/default/objects/Account/fields/Billing_Floor_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Floor_Number__c</fullName>
    <label>Billing Floor Number</label>
    <length>3</length>
    <type>Text</type>
</CustomField>