force-app/main/default/objects/Account/fields/Billing_Street_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street_Name__c</fullName>
    <label>Billing_Street_Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>