force-app/main/default/objects/Account/fields/Business_Owner_User_Name__c.field-meta.xml
<CustomField>
    <fullName>Business_Owner_User_Name__c</fullName>
    <formula>Owner.FirstName &amp; &quot; &quot; &amp; Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Owner User Name</label>
    <type>Text</type>
</CustomField>