force-app/main/default/objects/Account/fields/Case_Insensitive_ID__c.field-meta.xml
<CustomField>
    <fullName>Case_Insensitive_ID__c</fullName>
    <description>Case insensitive ID that can be used in Excel reports</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case insensitive ID that can be used in Excel reports</inlineHelpText>
    <label>Account ID 2</label>
    <type>Text</type>
</CustomField>