force-app/main/default/objects/Account/fields/Contracts__c.field-meta.xml
<CustomField>
    <fullName>Contracts__c</fullName>
    <description>Count number of related contracts</description>
    <inlineHelpText>Count number of related contracts</inlineHelpText>
    <label>Contracts</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>