force-app/main/default/objects/Account/fields/Count_number_of_BANs__c.field-meta.xml
<CustomField>
    <fullName>Count_number_of_BANs__c</fullName>
    <description>Count number of BAN&apos;s related to the Account</description>
    <label>Count number of BANs</label>
    <summaryForeignKey>Billing_Account__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>