force-app/main/default/objects/Account/fields/Credit_evaluation_expiration__c.field-meta.xml
<CustomField>
    <fullName>Credit_evaluation_expiration__c</fullName>
    <description>This field is set by workflow rule &apos;Set Sergel Credit evaluation exp date&apos;</description>
    <inlineHelpText>Date for when the Sergel Credit evaluation will expire and a new needs to be requested if needed</inlineHelpText>
    <label>Credit evaluation expiration</label>
    <type>Date</type>
</CustomField>