force-app/main/default/objects/Account/fields/Customer_has_Touchpoint__c.field-meta.xml
<CustomField>
    <fullName>Customer_has_Touchpoint__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Technical field used to indicate customer that have Touchpoint activated.</description>
    <label>Customer has Touchpoint</label>
    <type>Checkbox</type>
</CustomField>