force-app/main/default/objects/Account/fields/Customer_Service_notes__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_notes__c</fullName>
    <inlineHelpText>Field used by Customer Service to describe any contractual agreement Telia has with Customer that are not reflected in the original contract</inlineHelpText>
    <label>Voice</label>
    <length>100768</length>
    <type>Html</type>
</CustomField>