force-app/main/default/objects/Account/fields/CVR__c.field-meta.xml
<CustomField>
    <fullName>CVR__c</fullName>
    <description>User story ID: 10
User story: Create new CVR Account</description>
    <externalId>true</externalId>
    <inlineHelpText>An 8 digit unique code used to identify a company</inlineHelpText>
    <label>CVR</label>
    <length>8</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>