force-app/main/default/objects/Account/fields/CVR_Long_Description__c.field-meta.xml
<CustomField>
    <fullName>CVR_Long_Description__c</fullName>
    <description>Fetched from CVR.dk, this is the &quot;Virksomhedsform&quot;. Like Aktieselskab, Anpartselskab, Enkeltmandsfirma, Forening etc.</description>
    <inlineHelpText>Fetched from CVR.dk, this is the &quot;Virksomhedsform&quot;. Like Aktieselskab, Anpartselskab, Enkeltmandsfirma, Forening etc.</inlineHelpText>
    <label>CVR Company Form</label>
    <length>255</length>
    <type>Text</type>
</CustomField>