force-app/main/default/objects/Account/fields/CVR_Refresh_Date__c.field-meta.xml
<CustomField>
    <fullName>CVR_Refresh_Date__c</fullName>
    <description>User Story ID: 10
User Story: Create new CVR Account</description>
    <inlineHelpText>The date the Account was refreshed with data from the CVR register</inlineHelpText>
    <label>CVR Refresh Date</label>
    <type>Date</type>
</CustomField>