force-app/main/default/objects/Account/fields/Data_Fix__c.field-meta.xml
<CustomField>
    <fullName>Data_Fix__c</fullName>
    <description>MK - 27.08.2021 - TSDK-351 - Used to store Data/fix related notes to customer service. This info is viewed on Case.</description>
    <label>Data/Fix</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>