force-app/main/default/objects/Account/fields/Employee_Number__c.field-meta.xml
<CustomField>
    <fullName>Employee_Number__c</fullName>
    <description>The Employee Number of the Account owner - used for reporting</description>
    <formula>Owner.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employee Number</label>
    <type>Text</type>
</CustomField>