force-app/main/default/objects/Account/fields/Home_Office__c.field-meta.xml
<CustomField>
    <fullName>Home_Office__c</fullName>
    <description>MK - 27.08.2021 - TSDK-351 - Used to store Home Office related notes to customer service. This info is viewed on Case.</description>
    <label>Home Office</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>