force-app/main/default/objects/Account/fields/Home_Office_Product_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Home_Office_Product_Preferences__c</fullName>
    <label>Home Office Product Preferences</label>
    <length>255</length>
    <type>Text</type>
</CustomField>