force-app/main/default/objects/Account/fields/Is_Billing_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Billing_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Updated to Salesforce for all active CVR through Customer API (CIM) as part of salesforce migration implementation.</description>
    <label>Is Billing Active</label>
    <type>Checkbox</type>
</CustomField>