force-app/main/default/objects/Account/fields/Is_Freemove__c.field-meta.xml
<CustomField>
    <fullName>Is_Freemove__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Account is a Freemove customer. It is a checkbox that does not affect anything.</description>
    <inlineHelpText>Indicates if the Account is a Freemove customer.</inlineHelpText>
    <label>Is Freemove</label>
    <type>Checkbox</type>
</CustomField>