force-app/main/default/objects/Account/fields/Is_MNC__c.field-meta.xml
<CustomField>
    <fullName>Is_MNC__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the Account is a MNC customer. It is a checkbox that does not affect anything.</description>
    <inlineHelpText>Indicates if the Account is a MNC customer.</inlineHelpText>
    <label>Is MNC</label>
    <type>Checkbox</type>
</CustomField>