force-app/main/default/objects/Account/fields/Last_Activity_Date2__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Date2__c</fullName>
    <description>This finds the newest date of the two in the formula.
Field Last_activity_date__c = ActivityMetric.LastActivityDateTime captures Einstein Activities but not Salesforce Activities.
Field Last Activity captures Salesforce Activities, but not Einstein Activities.
So to join the two this helper fields has been created.</description>
    <formula>IF (ISBLANK(LastActivityDate),
    NULL,
    DATE(1900, 01, 01) + 
    (BLANKVALUE(LastActivityDate, DATE(1900, 01, 01)) - DATE(1900, 01, 01))
)</formula>
    <inlineHelpText>The most recent date with an Activity.</inlineHelpText>
    <label>Last Activity Date</label>
    <type>Date</type>
</CustomField>