force-app/main/default/objects/Account/fields/Last_activity_date__c.field-meta.xml
<CustomField>
    <fullName>Last_activity_date__c</fullName>
    <description>Field that uses Einstein Activity Capture to calculate the time since last activity on the account. This differs from the LastActivity by syncing all activities properly.</description>
    <formula>ENCODED:{!ID:ActivityMetric.LastActivityDateTime}</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last activity date</label>
    <type>DateTime</type>
</CustomField>