force-app/main/default/objects/Account/fields/Lead_Conversion_Check__c.field-meta.xml
<CustomField>
    <fullName>Lead_Conversion_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used in the Lead conversion process and prevents new accounts to be created from Sales Plays</description>
    <label>Lead Conversion Check</label>
    <type>Checkbox</type>
</CustomField>