force-app/main/default/objects/Account/fields/Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MK - 04/08/2021 - TSFDK-262</description>
    <label>Legacy</label>
    <type>Checkbox</type>
</CustomField>