force-app/main/default/objects/Account/fields/Legacy_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Legacy__c</fullName>
    <defaultValue>false</defaultValue>
    <description>MK - 04/08/2021 - TSFDK-262</description>
    <label>Legacy-Legacy</label>
    <type>Checkbox</type>
</CustomField>