force-app/main/default/objects/Account/fields/Links__c.field-meta.xml
<CustomField>
    <fullName>Links__c</fullName>
    <formula>HYPERLINK(&quot;https://datacvr.virk.dk/data/visenhed?enhedstype=virksomhed&amp;id=&quot;&amp;CVR__c&amp;&quot;&amp;soeg=&quot;&amp;CVR__c&amp;&quot;&amp;language=da&quot;, &quot;CVR&quot;) + &quot; / &quot; + HYPERLINK(&quot;http://www.google.com/search?q=&quot;&amp;Name, &quot;Google&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Links</label>
    <type>Text</type>
</CustomField>