force-app/main/default/objects/Account/fields/Max_Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Max_Payment_Terms__c</fullName>
    <defaultValue>&quot;30&quot;</defaultValue>
    <description>Maximum payment terms approved by Sergel (Default 30).</description>
    <inlineHelpText>Maximum allowed payment terms set by Sergel - valid for 3 months - if a new evaluation of max payment terms is necessary this can be done by ticking &apos;Request Credit Re-evaluation&apos;</inlineHelpText>
    <label>Max Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SBQQ__PaymentTerm</valueSetName>
    </valueSet>
</CustomField>