force-app/main/default/objects/Account/fields/Max_Quote_Amount__c.field-meta.xml
<CustomField>
    <fullName>Max_Quote_Amount__c</fullName>
    <description>Amount set by Sergel. Sergel receive mail once Opportunity is in Proposal stage and will set Amount</description>
    <inlineHelpText>Amount set by Sergel - valid for 3 month - if a new evaluation of max amount to be quoted is necessary this can be done by ticking &apos;Request Credit Re-evaluation&apos;</inlineHelpText>
    <label>Max Quote Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>