force-app/main/default/objects/Account/fields/Max_Quote_Amount_re_evaluation__c.field-meta.xml
<CustomField>
    <fullName>Max_Quote_Amount_re_evaluation__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the credit evaluation is expired a new credit evaluation can be requested by Sergel by ticking this box</inlineHelpText>
    <label>Request Credit Re-evaluation</label>
    <type>Checkbox</type>
</CustomField>