force-app/main/default/objects/Account/fields/MBB_and_Dual_SIM__c.field-meta.xml
<CustomField>
    <fullName>MBB_and_Dual_SIM__c</fullName>
    <description>User story ID: 78 and 284. Revenue numbers by product category</description>
    <inlineHelpText>The &quot;MBB&quot; revenue generated by the Account the last 12 months</inlineHelpText>
    <label>MBB and Dual SIM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>