force-app/main/default/objects/Account/fields/Nace_Code__c.field-meta.xml
<CustomField>
    <fullName>Nace_Code__c</fullName>
    <description>User Story ID: 10
User Story: Create new CVR Account</description>
    <inlineHelpText>The code for the type of business the account is operating within</inlineHelpText>
    <label>Nace Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>