force-app/main/default/objects/Account/fields/Nace_Description__c.field-meta.xml
<CustomField>
    <fullName>Nace_Description__c</fullName>
    <description>User Story ID: 10
User Story: Create new CVR Account</description>
    <inlineHelpText>The description of the business the account is operating within</inlineHelpText>
    <label>Nace Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>