force-app/main/default/objects/Account/fields/Name_and_Address__c.field-meta.xml
<CustomField>
    <fullName>Name_and_Address__c</fullName>
    <formula>Name + &quot;, &quot; +  BillingStreet + &quot;, &quot; +  BillingCity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Name and Address</label>
    <type>Text</type>
</CustomField>