force-app/main/default/objects/Account/fields/No_of_open_opportuntities__c.field-meta.xml
<CustomField>
    <fullName>No_of_open_opportuntities__c</fullName>
    <description>User Story ID: 11
Field is used in validation rules</description>
    <label>No of open opportuntities</label>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>