force-app/main/default/objects/Account/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <description>The Net Promoter Score of the Account</description>
    <inlineHelpText>The Net Promoter Score of the Account</inlineHelpText>
    <label>NPS</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>