force-app/main/default/objects/Account/fields/NPS_Detractor__c.field-meta.xml
<CustomField>
    <fullName>NPS_Detractor__c</fullName>
    <description>Used for reporting</description>
    <formula>IF( NPS__c  &lt;= 6,TRUE,FALSE)</formula>
    <label>NPS Detractor</label>
    <type>Checkbox</type>
</CustomField>