force-app/main/default/objects/Account/fields/NPS_Passive__c.field-meta.xml
<CustomField>
    <fullName>NPS_Passive__c</fullName>
    <description>Used for reporting</description>
    <formula>IF( NPS__c = 7  || NPS__c = 8,TRUE,FALSE)</formula>
    <label>NPS Passive</label>
    <type>Checkbox</type>
</CustomField>