force-app/main/default/objects/Account/fields/NPS_Promoters__c.field-meta.xml
<CustomField>
    <fullName>NPS_Promoters__c</fullName>
    <description>Used for reporting</description>
    <formula>IF( NPS__c &gt; 8,TRUE,FALSE)</formula>
    <label>NPS Promoters</label>
    <type>Checkbox</type>
</CustomField>