force-app/main/default/objects/Account/fields/npstoday__Trending_Pin_Choice__c.field-meta.xml
<CustomField>
    <fullName>npstoday__Trending_Pin_Choice__c</fullName>
    <label>Trending Pin Choice</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Time</fullName>
                <default>true</default>
                <label>All Time</label>
            </value>
            <value>
                <fullName>Last 6 Months</fullName>
            </value>
            <value>
                <fullName>Last 3 Months</fullName>
            </value>
            <value>
                <fullName>Last Month</fullName>
            </value>
            <value>
                <fullName>Last Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>