force-app/main/default/objects/Account/fields/Number_of_BANs__c.field-meta.xml
<CustomField>
    <fullName>Number_of_BANs__c</fullName>
    <description>Technical field used by workflow to number the BANs under individual accounts.</description>
    <label>BAN Number tracker</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>