force-app/main/default/objects/Account/fields/Number_of_Company_Domains__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Company_Domains__c</fullName>
    <label>Number of Company Domains</label>
    <summaryForeignKey>Company_Domain__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>