force-app/main/default/objects/Account/fields/Number_of_NPS_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Number_of_NPS_Contacts__c</fullName>
    <description>Shows how many NPS Contacts the Account has. DLRS counted.</description>
    <inlineHelpText>Shows how many NPS Contacts the Account has.</inlineHelpText>
    <label>Number of NPS Contacts</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>