force-app/main/default/objects/Account/fields/OPEX_WBS__c.field-meta.xml
<CustomField>
    <fullName>OPEX_WBS__c</fullName>
    <description>User story 405 - a general WBS from time registration that is used on fulfilment cases to register time</description>
    <inlineHelpText>For Activation teams to use when setting up customer. The WBS number is managed by the salesforce administrator</inlineHelpText>
    <label>OPEX WBS</label>
    <type>TextArea</type>
</CustomField>