force-app/main/default/objects/Account/fields/Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Type__c</fullName>
    <label>Opportunity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sales_Type</valueSetName>
    </valueSet>
</CustomField>