force-app/main/default/objects/Account/fields/Owner_segment_del__c.field-meta.xml
<CustomField>
    <fullName>Owner_segment_del__c</fullName>
    <description>The sales segment the sales rep belongs to.</description>
    <formula>Owner.Role__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The sales segment the sales rep belongs to.</inlineHelpText>
    <label>Owner segment</label>
    <type>Text</type>
</CustomField>