force-app/main/default/objects/Account/fields/Ownership_Outside_EU_etc__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Outside_EU_etc__c</fullName>
    <description>The customer is owned, partly owned or controlled by persons or companies in countries outside EU, Great Britain, Norway, Faroe Islands, Switzerland, Greenland, North America, Australia and New Zealand</description>
    <inlineHelpText>The customer is owned, partly owned or controlled by persons or companies in countries outside EU, Great Britain, Norway, Faroe Islands, Switzerland, Greenland, North America, Australia and New Zealand</inlineHelpText>
    <label>Ownership Outside EU etc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>