force-app/main/default/objects/Account/fields/Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Group__c</fullName>
    <description>Needs to have the exact same values with the ProductGroup picklist on the Case so that the EmailToCase setup can set the ProductGroup on the case based on this value.</description>
    <inlineHelpText>Used to help EmailtoCase to set the ProductGroup value on the Case the same.</inlineHelpText>
    <label>Product Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UC</fullName>
            </value>
            <value>
                <fullName>Data</fullName>
            </value>
            <value>
                <fullName>Firewall</fullName>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
            <value>
                <fullName>Hosting</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>SMS manager</fullName>
            </value>
            <value>
                <fullName>Telia Home Office</fullName>
            </value>
            <value>
                <fullName>Not applicable</fullName>
            </value>
            <value>
                <fullName>Voice</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
                <isActive>false</isActive>
                <label>Mobile</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>