force-app/main/default/objects/Account/fields/Rationale__c.field-meta.xml
<CustomField>
    <fullName>Rationale__c</fullName>
    <description>User story ID: 14
Used to describe why an Account without as CVR should be created</description>
    <inlineHelpText>Describe why this account is needed even though it does not have a CVR number. Please provide P-number or SE number if available</inlineHelpText>
    <label>Rationale</label>
    <type>TextArea</type>
</CustomField>