force-app/main/default/objects/Account/fields/Sales_Canvas_Lead__c.field-meta.xml
<CustomField>
    <fullName>Sales_Canvas_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sales Canvas Lead</label>
    <type>Checkbox</type>
</CustomField>