force-app/main/default/objects/Account/fields/Sales_Note_1__c.field-meta.xml
<CustomField>
    <fullName>Sales_Note_1__c</fullName>
    <description>Requested by Anders Yde, for Sales Play solution</description>
    <label>Sales Note 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>