force-app/main/default/objects/Account/fields/Sales_Play_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play_Record_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fields used for Lead conversion validation</inlineHelpText>
    <label>Sales Play Record Type</label>
    <type>Checkbox</type>
</CustomField>