force-app/main/default/objects/Account/fields/Sales_Play_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play_Status__c</fullName>
    <description>DKT-28929</description>
    <label>Sales Play Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <label>🟢</label>
            </value>
            <value>
                <fullName>Recently_Active</fullName>
                <label>🟡</label>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>🔴</label>
            </value>
            <value>
                <fullName>Lost – New Business/Renewal</fullName>
                <isActive>false</isActive>
                <label>Lost – New Business/Renewal</label>
            </value>
            <value>
                <fullName>Open - Pending Additional Action</fullName>
                <isActive>false</isActive>
                <label>Open - Pending Additional Action</label>
            </value>
            <value>
                <fullName>Won – New Business</fullName>
                <isActive>false</isActive>
                <label>Won – New Business</label>
            </value>
            <value>
                <fullName>Won – Renewals</fullName>
                <isActive>false</isActive>
                <label>Won – Renewals</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>