force-app/main/default/objects/Account/fields/Sales_Play_Vesting_Reason__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play_Vesting_Reason__c</fullName>
    <description>Used in Apex class SalesPlayManagementGetAccountsAction and Flow Sales_Play_Management to show the user the reason for an Account being filtered from the standard table. Values are populated temporarily by Apex and never saved.</description>
    <label>Sales Play Vesting Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>